update to English

--- a/Weekly Contest 85/839. Similar String Groups相似字符串组.md
+++ b/Weekly Contest 85/839. Similar String Groups相似字符串组.md
@@ -1,3 +1,28 @@
+# Two strings X and Y are similar if we can swap two letters 
+# (in different positions) of X, so that it equals Y.
+# For example, "tars" and "rats" are similar (swapping at positions 0 and 2), 
+# and "rats" and "arts" are similar, 
+# but "star" is not similar to "tars", "rats", or "arts".
+# Together, these form two connected groups by similarity: 
+# {"tars", "rats", "arts"} and {"star"}.  
+# Notice that "tars" and "arts" are in the same group 
+# even though they are not similar.  Formally, 
+# each group is such that a word is in the group 
+# if and only if it is similar to at least one other word in the group.
+# We are given a list A of unique strings.  
+# Every string in A is an anagram of every other string in A.  
+# How many groups are there?
+# Example 1:
+# Input: ["tars","rats","arts","star"]
+# Output: 2
+# Note:
+# A.length <= 2000
+# A[i].length <= 1000
+# A.length * A[i].length <= 20000
+# All words in A consist of lowercase letters only.
+# All words in A have the same length and are anagrams of each other.
+# The judging time limit has been increased for this question.
+
 # 如果我们交换字符串 X 中的两个不同位置的字母，
 # 使得它和字符串 Y 相等，那么称 X 和 Y 两个字符串相似。
 # 例如，"tars" 和 "rats" 是相似的 (交换 0 与 2 的位置)；
