--- a/Weekly Contest 85/837. New 21 Game新21点.md
+++ b/Weekly Contest 85/837. New 21 Game新21点.md
@@ -1,3 +1,30 @@
+# Alice plays the following game, loosely based on the card game "21".
+# Alice starts with 0 points, and draws numbers 
+# while she has less than K points.  During each draw, 
+# she gains an integer number of points randomly from the range [1, W], 
+# where W is an integer.  Each draw is independent and 
+# the outcomes have equal probabilities.
+# Alice stops drawing numbers when she gets K or more points.  
+# What is the probability that she has N or less points?
+# Example 1:
+# Input: N = 10, K = 1, W = 10
+# Output: 1.00000
+# Explanation:  Alice gets a single card, then stops.
+# Example 2:
+# Input: N = 6, K = 1, W = 10
+# Output: 0.60000
+# Explanation:  Alice gets a single card, then stops.
+# In 6 out of W = 10 possibilities, she is at or below N = 6 points.
+# Example 3:
+# Input: N = 21, K = 17, W = 10
+# Output: 0.73278
+# Note:
+# 0 <= K <= N <= 10000
+# 1 <= W <= 10000
+# Answers will be accepted as correct if they are within 10^-5 of 
+# the correct answer.
+# The judging time limit has been reduced for this question.
+
 # 爱丽丝参与一个大致基于纸牌游戏 “21点” 规则的游戏，描述如下：
 # 爱丽丝以 0 分开始，并在她的得分少于 K 分时抽取数字。 
 # 抽取时，她从 [1, W] 的范围中随机获得一个整数作为分数进行累计，
