--- a/Weekly Contest 85/838. Push Dominoes推多米诺.md
+++ b/Weekly Contest 85/838. Push Dominoes推多米诺.md
@@ -1,3 +1,34 @@
+# There are N dominoes in a line, 
+# and we place each domino vertically upright.
+# In the beginning, 
+# we simultaneously push some of the dominoes either to the left 
+# or to the right.
+# After each second, each domino 
+# that is falling to the left pushes the adjacent domino on the left.
+# Similarly, the dominoes falling to the right 
+# push their adjacent dominoes standing on the right.
+# When a vertical domino has dominoes falling on it from both sides, 
+# it stays still due to the balance of the forces.
+# For the purposes of this question, 
+# we will consider that a falling domino 
+# expends no additional force to a falling or already fallen domino.
+# Given a string "S" representing the initial state. 
+# S[i] = 'L', if the i-th domino has been pushed to the left; 
+# S[i] = 'R', if the i-th domino has been pushed to the right; 
+# S[i] = '.', if the i-th domino has not been pushed.
+# Return a string representing the final state. 
+# Example 1:
+# Input: ".L.R...LR..L.."
+# Output: "LL.RR.LLRRLL.."
+# Example 2:
+# Input: "RR.L"
+# Output: "RR.L"
+# Explanation: The first domino expends no additional 
+# force on the second domino.
+# Note:
+# 0 <= N <= 10^5
+# String dominoes contains only 'L', 'R' and '.'
+
 # 一行中有 N 张多米诺骨牌，我们将每张多米诺骨牌垂直竖立。
 # 在开始时，我们同时把一些多米诺骨牌向左或向右推。
 # 每过一秒，倒向左边的多米诺骨牌会推动其左侧相邻的多米诺骨牌。
